; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-properties.c_obs_property_list_item_float.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-properties.c_obs_property_list_item_float.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.list_data = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i64, %struct.TYPE_3__* }
%struct.TYPE_3__ = type { double }

@OBS_COMBO_FORMAT_FLOAT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local double @obs_property_list_item_float(i32* %0, i64 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.list_data*, align 8
  store i32* %0, i32** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = load i32, i32* @OBS_COMBO_FORMAT_FLOAT, align 4
  %8 = call %struct.list_data* @get_list_fmt_data(i32* %6, i32 %7)
  store %struct.list_data* %8, %struct.list_data** %5, align 8
  %9 = load %struct.list_data*, %struct.list_data** %5, align 8
  %10 = icmp ne %struct.list_data* %9, null
  br i1 %10, label %11, label %27

11:                                               ; preds = %2
  %12 = load i64, i64* %4, align 8
  %13 = load %struct.list_data*, %struct.list_data** %5, align 8
  %14 = getelementptr inbounds %struct.list_data, %struct.list_data* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = icmp ult i64 %12, %16
  br i1 %17, label %18, label %27

18:                                               ; preds = %11
  %19 = load %struct.list_data*, %struct.list_data** %5, align 8
  %20 = getelementptr inbounds %struct.list_data, %struct.list_data* %19, i32 0, i32 0
  %21 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %20, i32 0, i32 1
  %22 = load %struct.TYPE_3__*, %struct.TYPE_3__** %21, align 8
  %23 = load i64, i64* %4, align 8
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %22, i64 %23
  %25 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %24, i32 0, i32 0
  %26 = load double, double* %25, align 8
  br label %28

27:                                               ; preds = %11, %2
  br label %28

28:                                               ; preds = %27, %18
  %29 = phi double [ %26, %18 ], [ 0.000000e+00, %27 ]
  ret double %29
}

declare dso_local %struct.list_data* @get_list_fmt_data(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
